@@ -2054,8 +2054,8 @@ sub ifaceBroadcast # (interface)
 sub nameservers
 {
     my ($self) = @_;
-    my $users = $self->global()->modInstance('samba');
-    if ($users and ($users->mode() eq $users->STANDALONE_MODE)) {
+    my $samba = $self->global()->modInstance('samba');
+    if ($samba) {
         return ['127.0.0.1']
     }
 
