@@ -87,13 +87,6 @@ sub childNodes
         } elsif ($child->isa('EBox::Samba::User')) {
             next if ($child->isInternal());
 
-            if ($dn =~ m/^CN=krbtgt/i) {
-                if ($usersMod->mode() ne $usersMod->STANDALONE_MODE) {
-                    # hide this user
-                    next;
-                }
-            }
-
             if ($child->isDisabled()) {
                 $type = 'duser';
             } else {
@@ -163,7 +156,7 @@ sub nodeTypes
 {
     my ($self) = @_;
     my $usersMod = $self->parentModule();
-    my $rw = $usersMod->mode() eq $usersMod->STANDALONE_MODE;
+    my $rw = 1;
 
     return {
         domain => { actions => { filter => 0, add => $rw }, actionObjects => { add => 'OU' } },
@@ -193,11 +186,7 @@ sub precondition
     my ($self) = @_;
 
     my $samba = $self->parentModule();
-    if ($samba->mode() eq $samba->STANDALONE_MODE()) {
-        return ($samba->isProvisioned() and $samba->isEnabled());
-    } else {
-        return $samba->isEnabled();
-    }
+    return ($samba->isProvisioned() and $samba->isEnabled());
 }
 
 # Method: preconditionFailMsg
