@@ -131,11 +131,4 @@ sub _table
     return $dataForm;
 }
 
-sub precondition
-{
-    my ($self) = @_;
-    my $usersMod = $self->parentModule();
-    return ($usersMod->mode() eq $usersMod->STANDALONE_MODE());
-}
-
 1;
