@@ -61,11 +61,4 @@ sub _table
     return $dataTable;
 }
 
-sub precondition
-{
-    my ($self) = @_;
-    my $usersMod = $self->parentModule();
-    return $usersMod->mode() eq $usersMod->STANDALONE_MODE();
-}
-
 1;
