@@ -75,13 +75,6 @@ sub _table
     return $dataTable;
 }
 
-sub precondition
-{
-    my ($self) = @_;
-    my $usersMod = $self->parentModule();
-    return $usersMod->mode() eq $usersMod->STANDALONE_MODE();
-}
-
 sub deletedRowNotify
 {
     my ($self, $row) = @_;
