@@ -1,63 +1,0 @@
-#!/usr/bin/perl
-# Copyright (C) 2013 Zentyal S.L.
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License, version 2, as
-# published by the Free Software Foundation.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-
-use strict;
-use warnings;
-
-use EBox;
-use EBox::Global;
-
-EBox::init();
-
-my $global = EBox::Global->getInstance(1);
-my $users = $global->modInstance('samba');
-if ($users->mode() ne $users->EXTERNAL_AD_MODE) {
-    die 'Users module not using external Active Directory';
-}
-
-my $mode = $users->model('Mode');
-my $row = $mode->row();
-my $currentDc = $row->valueByName('dcHostname');
-my $currentUser = $row->valueByName('dcUser');
-
-print "Domain controller FQDN (Full Qualified Domain Name) [$currentDc]: ";
-my $newDc = <STDIN>;
-chomp $newDc;
-$newDc = $currentDc unless length $newDc;
-
-print "User name [$currentUser]: ";
-my $newUser = <STDIN>;
-chomp $newUser;
-$newUser = $currentUser unless length $newUser;
-
-print "User password: ";
-my $newPwd1 = <STDIN>;
-chomp $newPwd1;
-
-print "Repeat user password: ";
-my $newPwd2 = <STDIN>;
-chomp $newPwd2;
-
-$row->elementByName('dcHostname')->setValue($newDc);
-$row->elementByName('dcUser')->setValue($newUser);
-$row->elementByName('dcPassword')->setValue($newPwd1);
-$row->elementByName('dcPassword2')->setValue($newPwd2);
-$row->store();
-
-my $webadmin = $global->modInstance('webadmin');
-$webadmin->restartService();
-
-print "Done. You should restart all services now.\n";
