@@ -1,46 +1,0 @@
-#!/usr/bin/perl
-# Copyright (C) 2013 Zentyal S.L.
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License, version 2, as
-# published by the Free Software Foundation.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-
-use strict;
-use warnings;
-
-use EBox;
-use EBox::Global;
-
-EBox::init();
-my $global = EBox::Global->getInstance(1);
-my $users = $global->modInstance('samba');
-if ($users->mode() ne $users->EXTERNAL_AD_MODE) {
-    die 'Users module not using external Active Directory';
-}
-
-my $ldap = $users->ldap();
-my @principals = @{ $ldap->externalServicesPrincipals() };
-if (not @principals) {
-    # nothing to do
-    exit 0;
-}
-
-# update keytabs calling to initKeyTabs
-$ldap->initKeyTabs();
-
-# # ??? Restart services
-# foreach my $principal (@principals) {
-#     my $mod = $global->modInstance($principal->{module});
-#     $mod->restartService();
-# }
-
-1;
